EXTRA_DIST += \
	klish/kdb/libxml2/Makefile.am \
	klish/kdb/roxml/Makefile.am \
	klish/kdb/expat/Makefile.am

if WITH_LIBXML2
include $(top_srcdir)/klish/kdb/libxml2/Makefile.am
endif
if WITH_ROXML
include $(top_srcdir)/klish/kdb/roxml/Makefile.am
endif
if WITH_EXPAT
include $(top_srcdir)/klish/kdb/expat/Makefile.am
endif
