libklish_la_SOURCES += \
	klish/kscheme/khelper.c \
	klish/kscheme/ksym.c \
	klish/kscheme/kplugin.c \
	klish/kscheme/kptype.c \
	klish/kscheme/kaction.c \
	klish/kscheme/kparam.c \
	klish/kscheme/kcommand.c \
	klish/kscheme/kview.c \
	klish/kscheme/kscheme.c

libklish_la_SOURCES += \
	klish/kscheme/ischeme.c \
	klish/kscheme/iptype.c \
	klish/kscheme/iaction.c \
	klish/kscheme/iview.c \
	klish/kscheme/icommand.c \
	klish/kscheme/iparam.c \
	klish/kscheme/iplugin.c

