libklish_la_SOURCES += \
	klish/kscheme/khelper.c \
	klish/kscheme/ksym.c \
	klish/kscheme/kplugin.c \
	klish/kscheme/kplugin_parse.c \
	klish/kscheme/kptype.c \
	klish/kscheme/kaction.c \
	klish/kscheme/kaction_parse.c \
	klish/kscheme/kparam.c \
	klish/kscheme/kparam_parse.c \
	klish/kscheme/kcommand.c \
	klish/kscheme/kcommand_parse.c \
	klish/kscheme/kview.c \
	klish/kscheme/kview_parse.c \
	klish/kscheme/kscheme.c \
	klish/kscheme/kscheme_parse.c
