libklish_la_SOURCES += \
	klish/kscheme/khelper.c \
	klish/kscheme/ksym.c \
	klish/kscheme/kplugin.c \
	klish/kscheme/kptype.c \
	klish/kscheme/kaction.c \
	klish/kscheme/kparam.c \
	klish/kscheme/kcommand.c \
	klish/kscheme/kview.c \
	klish/kscheme/kscheme.c \
	klish/kscheme/knspace.c \
	klish/kscheme/kdb.c \
	klish/kscheme/kentry.c
