libklish_la_SOURCES += \
	klish/ksession/kudata.c \
	klish/ksession/kustore.c \
	klish/ksession/kcontext.c \
	klish/ksession/klevel.c \
	klish/ksession/kpath.c \
	klish/ksession/kexec.c \
	klish/ksession/kparg.c \
	klish/ksession/kpargv.c \
	klish/ksession/ksession.c \
	klish/ksession/ksession_parse.c \
	klish/ksession/grabber.c
