db_LTLIBRARIES += kplugin-klish.la
kplugin_klish_la_SOURCES =
kplugin_klish_la_LDFLAGS = $(AM_LDFLAGS) -avoid-version -module
kplugin_klish_la_LIBS =
kplugin_klish_la_CFLAGS = $(AM_LDFLAGS)
kplugin_klish_la_LIBADD = libklish.la

kplugin_klish_la_SOURCES += \
	plugins/klish/plugin_init.c
#	plugins/klish/hook_access.c \
#	plugins/klish/hook_config.c \
#	plugins/klish/hook_log.c \
#	plugins/klish/sym_misc.c \
#	plugins/klish/sym_script.c \
#	plugins/klish/private.h
