plugin_LTLIBRARIES += kplugin-klish.la
kplugin_klish_la_SOURCES =
kplugin_klish_la_LDFLAGS = $(AM_LDFLAGS) -avoid-version -module
kplugin_klish_la_LIBS =
kplugin_klish_la_CFLAGS = $(AM_LDFLAGS)
kplugin_klish_la_LIBADD = libklish.la

kplugin_klish_la_SOURCES += \
	plugins/klish/private.h \
	plugins/klish/plugin_init.c \
	plugins/klish/ptypes.c \
	plugins/klish/misc.c \
	plugins/klish/nav.c \
	plugins/klish/log.c
