lib_LTLIBRARIES += libklish-plugin-klish.la
libklish_plugin_klish_la_SOURCES =
libklish_plugin_klish_la_LDFLAGS = $(AM_LDFLAGS)
libklish_plugin_klish_la_LIBS =
libklish_plugin_klish_la_CFLAGS = $(AM_LDFLAGS)
libklish_plugin_klish_la_LIBADD = libklish.la

libklish_plugin_klish_la_SOURCES += \
	plugins/klish/private.h \
	plugins/klish/plugin_init.c \
	plugins/klish/ptypes.c \
	plugins/klish/misc.c \
	plugins/klish/nav.c \
	plugins/klish/log.c
