plugin_LTLIBRARIES += kplugin-script.la
kplugin_script_la_SOURCES =
kplugin_script_la_LDFLAGS = $(AM_LDFLAGS) -avoid-version -module
kplugin_script_la_LIBS =
kplugin_script_la_CFLAGS = $(AM_LDFLAGS)
kplugin_script_la_LIBADD = libklish.la

kplugin_script_la_SOURCES += \
	plugins/script/private.h \
	plugins/script/plugin_init.c \
	plugins/script/script.c
