lib_LTLIBRARIES += libklish-plugin-script.la
libklish_plugin_script_la_SOURCES =
libklish_plugin_script_la_LDFLAGS = $(AM_LDFLAGS)
libklish_plugin_script_la_LIBS =
libklish_plugin_script_la_CFLAGS = $(AM_LDFLAGS)
libklish_plugin_script_la_LIBADD = libklish.la

libklish_plugin_script_la_SOURCES += \
	plugins/script/private.h \
	plugins/script/plugin_init.c \
	plugins/script/script.c
