plugin_LTLIBRARIES += kplugin-shell.la
kplugin_shell_la_SOURCES =
kplugin_shell_la_LDFLAGS = $(AM_LDFLAGS) -avoid-version -module
kplugin_shell_la_LIBS =
kplugin_shell_la_CFLAGS = $(AM_LDFLAGS)
kplugin_shell_la_LIBADD = libklish.la

kplugin_shell_la_SOURCES += \
	plugins/shell/private.h \
	plugins/shell/plugin_init.c \
	plugins/shell/shell.c
