lib_LTLIBRARIES += libkdb-libxml2.la
libkdb_libxml2_la_SOURCES =
libkdb_libxml2_la_LDFLAGS = $(AM_LDFLAGS) $(LIBXML2_LDFLAGS) $(VERSION_INFO)
libkdb_libxml2_la_LIBS = $(LIBXML2_LIBS)
libkdb_libxml2_la_CFLAGS = $(AM_LDFLAGS) $(LIBXML2_CFLAGS)

libkdb_libxml2_la_SOURCES += \
	klish/kdb/xml-common/load.c \
	klish/kdb/libxml2/libxml2_api.c
