lib_LTLIBRARIES += libkdb-roxml.la
libkdb_roxml_la_SOURCES =
libkdb_roxml_la_LDFLAGS = $(AM_LDFLAGS) $(ROXML_LDFLAGS) $(VERSION_INFO)
libkdb_roxml_la_LIBS = $(ROXML_LIBS)
libkdb_roxml_la_CFLAGS = $(AM_LDFLAGS) $(ROXML_CFLAGS)

libkdb_roxml_la_SOURCES += \
	klish/kdb/xml-common/load.c \
	klish/kdb/roxml/roxml_api.c
